--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,37 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/login_bg"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
 
     <!--<ImageView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:scaleType="fitXY"-->
-        <!--android:src="@drawable/login_bg" />-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:scaleType="fitXY"-->
+    <!--android:src="@drawable/login_bg" />-->
 
     <!--<ScrollView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:scrollbars="none">-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:scrollbars="none">-->
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="1">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:weightSum="1"
-            android:orientation="vertical">
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:layout_weight="0.2"
             android:gravity="center"
-            android:layout_gravity="center"
             android:orientation="vertical">
 
 
@@ -42,95 +40,88 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
                 android:layout_marginTop="200dp"
+                android:layout_marginRight="50dp"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:weightSum="1"
-                    android:gravity="center"
-                    android:background="@drawable/et_bg"
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:layout_height="wrap_content">
+                    android:background="@drawable/et_bg"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
 
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/mb"
-                        />
+                        android:src="@drawable/mb" />
 
                     <View
                         android:layout_width="2dp"
                         android:layout_height="22dp"
-                        android:background="#0FA315"
                         android:layout_marginLeft="5dp"
-                        >
-                    </View>
+                        android:background="#0FA315"></View>
 
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
+                        android:background="@null"
                         android:gravity="start|center"
                         android:hint="Enter Mobile No."
                         android:inputType="number"
                         android:textColor="#000"
                         android:textColorHint="#000"
-                        android:textSize="15dp"
-                        android:background="@null"
-                        />
+                        android:textSize="15dp" />
 
                 </LinearLayout>
+
                 <LinearLayout
-                    android:weightSum="1"
-                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/et_bg"
+                    android:gravity="center"
                     android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:weightSum="1">
 
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/pss"
-                        />
+                        android:src="@drawable/pss" />
 
                     <View
                         android:layout_width="2dp"
                         android:layout_height="22dp"
-                        android:background="#0FA315"
                         android:layout_marginLeft="5dp"
-                        >
-                    </View>
+                        android:background="#0FA315"></View>
 
                     <EditText
-                        android:layout_weight="1"
-                        android:background="@null"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="start|center"
                         android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:gravity="start|center"
                         android:hint="Enter Password"
                         android:inputType="textPassword"
                         android:textColor="#000"
                         android:textColorHint="#000"
-                        android:textSize="15dp"
-                        />
+                        android:textSize="15dp" />
 
                 </LinearLayout>
 
                 <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="20dp"
+                    android:gravity="center"
                     android:text="Forgot Password?"
                     android:textColor="#fff"
-                    android:gravity="center"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginTop="5dp"
-                    android:textSize="18dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:textSize="18dp" />
 
             </LinearLayout>
 
@@ -139,15 +130,15 @@
                 android:id="@+id/btn_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/signin_bg"
+                android:fontFamily="@font/myfont"
                 android:gravity="center"
                 android:text="Sign In"
-                android:fontFamily="@font/myfont"
-                android:background="@drawable/signin_bg"
                 android:textAllCaps="false"
                 android:textColor="#fff"
                 android:textSize="22dp"
 
-                 />
+                />
 
 
         </LinearLayout>
@@ -164,25 +155,25 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Don't have an account?"
-                android:textSize="16dp"
-                android:textAlignment="center"
-                android:typeface="serif"
-                android:textAllCaps="false"
                 android:layout_marginBottom="10dp"
-                android:textColor="#fff" />
+                android:text="Don't have an account?"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="#fff"
+                android:textSize="16dp"
+                android:typeface="serif" />
 
             <TextView
                 android:id="@+id/btn_signup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sign Up"
-                android:textSize="22dp"
-                android:textAlignment="center"
                 android:fontFamily="@font/myfont"
-                android:typeface="serif"
+                android:text="Sign Up"
+                android:textAlignment="center"
                 android:textAllCaps="false"
-                android:textColor="#2BA311" />
+                android:textColor="#2BA311"
+                android:textSize="22dp"
+                android:typeface="serif" />
         </LinearLayout>
 
 
