--- a/app/src/main/res/layout/contact_us_fragment.xml
+++ b/app/src/main/res/layout/contact_us_fragment.xml
@@ -21,9 +21,9 @@
                 android:weightSum="1">
 
                 <LinearLayout
-                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:orientation="vertical"
                     android:padding="10dp">
 
@@ -123,21 +123,21 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_marginTop="10dp"
-                        android:gravity="end"
-                        android:elevation="4dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:elevation="4dp"
+                        android:gravity="end">
 
                         <Button
                             android:id="@+id/btn_dialog"
-                            android:padding="10dp"
                             android:layout_width="wrap_content"
                             android:layout_height="40dp"
                             android:layout_below="@+id/text_dialog"
                             android:layout_centerHorizontal="true"
                             android:background="@drawable/btn_bg_new"
                             android:gravity="center_vertical|center_horizontal"
+                            android:padding="10dp"
                             android:text="Send"
                             android:textAllCaps="false"
                             android:textColor="#ffffffff" />
