--- a/app/src/main/res/layout/fragment_map_fregment.xml
+++ b/app/src/main/res/layout/fragment_map_fregment.xml
@@ -5,129 +5,125 @@
     android:layout_height="match_parent"
     tools:context=".fregment.MemberComments">
 
-  <LinearLayout
-      android:orientation="vertical"
-      android:weightSum="1"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
-
-
-      <LinearLayout
-          android:padding="5dp"
-          android:layout_marginTop="5dp"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content">
-
-          <android.support.v7.widget.CardView
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_margin="5dp"
-              >
-
-          <LinearLayout
-              android:id="@+id/btnn"
-              android:weightSum="1"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-
-              <LinearLayout
-                  android:layout_weight="0.70"
-                  android:orientation="vertical"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
-
-                 <ImageView
-                     android:src="@drawable/logo_lok"
-                     android:layout_width="match_parent"
-                     android:layout_height="65dp" />
-
-                  <TextView
-                      android:text="Mr Kumar"
-                      android:textColor="#000"
-                      android:gravity="center"
-                      android:textSize="11dp"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content" />
-
-              </LinearLayout>
-
-              <LinearLayout
-                  android:layout_weight="0.30"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
-
-                  <TextView
-                      android:text="If you've ever attended a corporate event, then you know the welcome speech gets all of the attention. The welcome speech is what allures."
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content" />
-
-              </LinearLayout>
-
-          </LinearLayout>
-          </android.support.v7.widget.CardView>
-
-
-
-      </LinearLayout>
-
     <LinearLayout
-        android:padding="5dp"
-        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="1">
 
-      <android.support.v7.widget.CardView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_margin="5dp"
-          >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:padding="5dp">
 
-          <LinearLayout
-              android:id="@+id/btnn1"
-              android:weightSum="1"
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
 
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+                <LinearLayout
+                    android:id="@+id/btnn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
 
-              <LinearLayout
-                  android:layout_weight="0.70"
-                  android:orientation="vertical"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.70"
+                        android:orientation="vertical">
 
-                  <ImageView
-                      android:src="@drawable/logo_lok"
-                      android:layout_width="match_parent"
-                      android:layout_height="65dp" />
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="65dp"
+                            android:src="@drawable/logo_lok" />
 
-                  <TextView
-                      android:text="Mr Kumar"
-                      android:textColor="#000"
-                      android:gravity="center"
-                      android:textSize="11dp"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Mr Kumar"
+                            android:textColor="#000"
+                            android:textSize="11dp" />
 
-              </LinearLayout>
+                    </LinearLayout>
 
-              <LinearLayout
-                  android:layout_weight="0.30"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.30">
 
-                  <TextView
-                      android:text="If you've ever attended a corporate event, then you know the welcome speech gets all of the attention. The welcome speech is what allures."
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="If you've ever attended a corporate event, then you know the welcome speech gets all of the attention. The welcome speech is what allures." />
 
-              </LinearLayout>
+                    </LinearLayout>
 
-          </LinearLayout>
-      </android.support.v7.widget.CardView>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:padding="5dp">
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
+
+                <LinearLayout
+                    android:id="@+id/btnn1"
+                    android:layout_width="match_parent"
+
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.70"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="65dp"
+                            android:src="@drawable/logo_lok" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Mr Kumar"
+                            android:textColor="#000"
+                            android:textSize="11dp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.30">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="If you've ever attended a corporate event, then you know the welcome speech gets all of the attention. The welcome speech is what allures." />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+
     </LinearLayout>
-
-  </LinearLayout>
 
 </FrameLayout>
