--- a/app/src/main/res/layout/guest_event_screen.xml
+++ b/app/src/main/res/layout/guest_event_screen.xml
@@ -30,7 +30,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
                         android:orientation="vertical"
-                        android:background="@color/colorPrimary"
                         android:weightSum="1">
 
 
@@ -39,12 +38,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="200dp"
                             android:layout_gravity="center"
-                            android:src="@drawable/logo_lok"
-
-                            />
-
+                            android:padding="5dp"
+                            android:src="@drawable/logo_lok" />
 
                     </LinearLayout>
+
                 </android.support.v7.widget.CardView>
 
                 <LinearLayout
@@ -64,6 +62,7 @@
                         android:text="Join"
                         android:textAllCaps="false"
                         android:textColor="#fff" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -279,8 +278,7 @@
                                     android:layout_height="75dp"
                                     android:layout_marginBottom="5dp"
                                     android:src="@drawable/logo_lok"
-                                    app:civ_border_color="#000"
-                                     />
+                                    app:civ_border_color="#000" />
 
                                 <TextView
                                     android:layout_width="match_parent"
