--- a/app/src/main/res/layout/help_fragment.xml
+++ b/app/src/main/res/layout/help_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -20,8 +20,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:padding="5dp"
                 android:orientation="horizontal"
+                android:padding="5dp"
                 android:weightSum="1">
 
                 <ImageView
@@ -33,12 +33,12 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:textSize="16dp"
                     android:layout_gravity="center"
                     android:layout_weight="0.20"
+                    android:gravity="start"
                     android:text="FAQ"
-                    android:textColor="#000" />
+                    android:textColor="#000"
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
@@ -46,8 +46,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:padding="5dp"
                 android:orientation="horizontal"
+                android:padding="5dp"
                 android:weightSum="1">
 
                 <ImageView
@@ -57,18 +57,20 @@
                     android:src="@drawable/nameicon" />
 
                 <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_weight="0.20"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.20"
+                    android:orientation="vertical">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:textSize="16dp"
                         android:layout_gravity="center"
+                        android:gravity="start"
                         android:text="Contact us"
-                        android:textColor="#000" />
+                        android:textColor="#000"
+                        android:textSize="16dp" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -83,8 +85,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:padding="5dp"
                 android:orientation="horizontal"
+                android:padding="5dp"
                 android:weightSum="1">
 
                 <ImageView
@@ -96,12 +98,12 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="start"
                     android:layout_gravity="center"
-                    android:textSize="16dp"
                     android:layout_weight="0.20"
+                    android:gravity="start"
                     android:text="Terms &amp; Privacy Policy"
-                    android:textColor="#000" />
+                    android:textColor="#000"
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
@@ -109,8 +111,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:padding="5dp"
                 android:orientation="horizontal"
+                android:padding="5dp"
                 android:weightSum="1">
 
                 <ImageView
@@ -122,12 +124,12 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="start"
                     android:layout_gravity="center"
                     android:layout_weight="0.20"
-                    android:textSize="16dp"
+                    android:gravity="start"
                     android:text="App info"
-                    android:textColor="#000" />
+                    android:textColor="#000"
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
