--- a/app/src/main/res/layout/host_event_screen_fragment.xml
+++ b/app/src/main/res/layout/host_event_screen_fragment.xml
@@ -30,8 +30,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
-                        android:orientation="vertical"
                         android:background="@color/colorPrimary"
+                        android:orientation="vertical"
                         android:weightSum="1">
 
                         <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -47,15 +47,15 @@
 
 
                 <Button
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="end"
                     android:layout_margin="5dp"
-                    android:text="Edit"
-                    android:textColor="#fff"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/btn_bg_new"
-                    android:layout_gravity="end"
+                    android:text="Edit"
                     android:textAllCaps="false"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp" />
+                    android:textColor="#fff" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -269,8 +269,7 @@
                                     android:layout_height="75dp"
                                     android:layout_marginBottom="5dp"
                                     android:src="@drawable/logo_lok"
-                                    app:civ_border_color="#000"
-                                     />
+                                    app:civ_border_color="#000" />
 
                                 <TextView
                                     android:layout_width="match_parent"
