--- a/app/src/main/res/layout/my_activity_fragment.xml
+++ b/app/src/main/res/layout/my_activity_fragment.xml
@@ -50,8 +50,7 @@
                             android:layout_height="75dp"
                             android:layout_marginBottom="5dp"
                             android:src="@drawable/logo_lok"
-                            app:civ_border_color="#000"
-                             />
+                            app:civ_border_color="#000" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -127,8 +126,8 @@
                                 android:id="@+id/act_delete"
                                 android:layout_width="match_parent"
                                 android:layout_height="40dp"
-                                android:layout_weight="0.50"
                                 android:layout_gravity="center"
+                                android:layout_weight="0.50"
                                 android:background="@drawable/btn_bg_new"
                                 android:text="Delete"
                                 android:textAllCaps="false"
