--- a/app/src/main/res/layout/nav_header_navigation.xml
+++ b/app/src/main/res/layout/nav_header_navigation.xml
@@ -12,29 +12,28 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:src="@drawable/logo_lok"
-        app:civ_border_width="0.5dp"
         android:layout_marginBottom="5dp"
-        app:civ_border_color="#fff"/>
+        android:src="@drawable/logo_lok"
+        app:civ_border_color="#fff"
+        app:civ_border_width="0.5dp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:textColor="#fff"
         android:text="Ms Alina"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#fff" />
 
     <TextView
         android:id="@+id/textView"
-        android:textColor="#fff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="msalina@gmail.com" />
+        android:text="msalina@gmail.com"
+        android:textColor="#fff" />
 
 </LinearLayout>
