--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,7 +15,6 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -22,12 +22,13 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    >
+                    android:layout_margin="3dp"
+                    app:cardElevation="4dp">
 
                     <LinearLayout
-                        android:background="@drawable/gradientbackground"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="#fff"
                         android:orientation="vertical"
                         android:weightSum="1">
 
@@ -35,26 +36,26 @@
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:layout_gravity="right"
+                            android:layout_marginTop="5dp"
                             android:layout_marginRight="30dp"
                             android:src="@drawable/edit_icon" />
 
                         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:id="@+id/profile_image"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
                             android:layout_gravity="center"
                             android:layout_marginBottom="5dp"
                             android:src="@drawable/logo_lok"
-                            app:civ_border_color="#000"
-                             />
+                            app:civ_border_color="#000" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="5dp"
                             android:gravity="center"
                             android:text="Ms Alina"
-                            android:textColor="#fff"
+                            android:textColor="@color/colorPrimary"
                             android:textSize="20dp"
                             android:textStyle="bold" />
 
@@ -62,11 +63,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
+                            android:layout_marginBottom="5dp"
                             android:gravity="center"
                             android:text="25 year, Female"
-                            android:textColor="#fff"
+                            android:textColor="@color/colorPrimary"
                             android:textSize="15dp" />
+
                     </LinearLayout>
+
                 </android.support.v7.widget.CardView>
 
                 <LinearLayout
@@ -95,6 +99,7 @@
                         android:text="msalina@gmail.com"
                         android:textColor="#000"
                         android:textSize="15dp" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -105,17 +110,16 @@
                     android:orientation="vertical">
 
                     <LinearLayout
-                        android:weightSum="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:weightSum="1">
 
                         <ImageView
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:src="@drawable/mb"
-                            />
+                            android:src="@drawable/mb" />
 
 
                         <TextView
@@ -123,10 +127,9 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:gravity="start|center"
-                            android:textColor="#000"
                             android:text="Mobile"
-                            android:textSize="15dp"
-                            />
+                            android:textColor="#000"
+                            android:textSize="15dp" />
 
                     </LinearLayout>
 
@@ -138,6 +141,7 @@
                         android:text="9999999999"
                         android:textColor="#000"
                         android:textSize="15dp" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -154,32 +158,31 @@
                         android:weightSum="1">
 
                         <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_weight="0.5"
-                            android:weightSum="1"
                             android:gravity="center"
                             android:orientation="horizontal"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:weightSum="1">
 
                             <ImageView
                                 android:layout_width="24dp"
                                 android:layout_height="24dp"
-                                android:src="@drawable/locationicon"
-                                />
+                                android:src="@drawable/locationicon" />
 
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:gravity="start|center"
-                                android:textColor="#000"
-                                android:text="Primary Address"
-                                android:textSize="15dp"
                                 android:background="@null"
-                                />
+                                android:gravity="start|center"
+                                android:text="Primary Address"
+                                android:textColor="#000"
+                                android:textSize="15dp" />
 
                         </LinearLayout>
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -199,6 +202,7 @@
                         android:text="House no. 123, housing board colony, Indore"
                         android:textColor="#000"
                         android:textSize="15dp" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -215,32 +219,31 @@
                         android:weightSum="1">
 
                         <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_weight="0.5"
-                            android:weightSum="1"
                             android:gravity="center"
                             android:orientation="horizontal"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:weightSum="1">
 
                             <ImageView
                                 android:layout_width="24dp"
                                 android:layout_height="24dp"
-                                android:src="@drawable/locationicon"
-                                />
+                                android:src="@drawable/locationicon" />
 
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:gravity="start|center"
-                                android:textColor="#000"
-                                android:text="Secondary Address"
-                                android:textSize="15dp"
                                 android:background="@null"
-                                />
+                                android:gravity="start|center"
+                                android:text="Secondary Address"
+                                android:textColor="#000"
+                                android:textSize="15dp" />
 
                         </LinearLayout>
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -262,8 +265,10 @@
 
                 </LinearLayout>
 
-
             </LinearLayout>
+
         </ScrollView>
+
     </LinearLayout>
+
 </FrameLayout>
