--- a/app/src/main/res/layout/rating_fragment.xml
+++ b/app/src/main/res/layout/rating_fragment.xml
@@ -26,12 +26,12 @@
                 android:layout_margin="5dp">
 
                 <LinearLayout
-                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
-                    android:orientation="vertical"
                     android:background="@color/colorPrimary"
+                    android:orientation="vertical"
                     android:weightSum="1">
 
 
@@ -42,8 +42,7 @@
                         android:layout_gravity="center"
                         android:layout_marginBottom="5dp"
                         android:src="@drawable/logo_lok"
-                        app:civ_border_color="#000"
-                        />
+                        app:civ_border_color="#000" />
 
                     <TextView
                         android:layout_width="match_parent"
